Adapt to JDK24 (#5)